refactor: optimize achievement progress calculation using context-based data fetching and add projection-based book summaries